--- a/src/app/views/container/container.component.html
+++ b/src/app/views/container/container.component.html
@@ -19,6 +19,12 @@
               <button mat-menu-item routerLink="/limpiador">
                 <span>Limpiador</span>
               </button>
+              <button mat-menu-item routerLink="/verip">
+                <span>Verificar IP</span>
+              </button>
+              <button mat-menu-item routerLink="/informacion">
+                <span>Generar Info</span>
+              </button>
             </mat-menu>
           </ul>
           <!-- Header Icons -->
