--- a/src/app/views/container/views/generador/generador.component.html
+++ b/src/app/views/container/views/generador/generador.component.html
@@ -16,7 +16,7 @@
       <mat-form-field appearance="outline" class="w-full">
         <mat-label>Mes</mat-label>
         <mat-select formControlName="mes">
-          <mat-option value="0">Mes random</mat-option>
+          <mat-option value="random">Mes random</mat-option>
           <mat-option value="1">Enero</mat-option>
           <mat-option value="2">Febrero</mat-option>
           <mat-option value="3">Marzo</mat-option>
@@ -36,7 +36,7 @@
       <mat-form-field appearance="outline" class="w-full">
         <mat-label>Año</mat-label>
         <mat-select formControlName="anio">
-          <mat-option value="0">Año random</mat-option>
+          <mat-option value="random">Año random</mat-option>
           <mat-option value="21">2021</mat-option>
           <mat-option value="22">2022</mat-option>
           <mat-option value="23">2023</mat-option>
@@ -71,17 +71,7 @@
 <!-- {{ tarjetas | json }} -->
 
 
-<div class="grid-flow-row justify-center m-10">
-  <!-- <div>
-    <textarea style="border: 2px solid;" class="border-2 border-gray-900 rounded-lg text-gray-900 w-full bg-transparent p-4 text-center" rows="15" [formControl]="resultado"></textarea>
-    <div class="flex justify-center mb-5">
-      <div>
-        <button mat-button style="border: 2px solid" class="border-2 border-red-600 rounded-lg text-red-600 hover:bg-red-600 hover:text-white mx-3" (click)="resultado.reset()">
-          Limpiar
-        </button>
-      </div>
-    </div>
-  </div> -->
+<div class="grid-flow-row justify-center m-10" *ngIf="resultado.value">
   <mat-form-field appearance="outline" class="w-full">
     <mat-label>Resultado</mat-label>
     <textarea matInput type="text" class="bg-transparent" rows="15" [formControl]="resultado"></textarea>
@@ -90,3 +80,11 @@
     </button>
   </mat-form-field>
 </div>
+
+<ng-container *ngIf="cargando">
+  <div class="flex justify-center my-3">
+    <div>
+      <mat-spinner></mat-spinner>
+    </div>
+  </div>
+</ng-container>
