Correcion de commit

--- a/src/app/views/container/views/limpiador/limpiador.component.html
+++ b/src/app/views/container/views/limpiador/limpiador.component.html
@@ -4,7 +4,7 @@
       <span class="text-2xl">Limpiador</span>
     </div>
   </div>
-  <div class="grid grid-cols-2 gap-4">
+  <div class="grid xl:grid-cols-2 sm:grid-cols-1 gap-4">
     <div>
       <mat-form-field appearance="outline" class="w-full">
         <mat-label>Envio</mat-label>
